# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#declarative-config
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[metadata]
name = bxsolana-trader
version = 2.1.1
description = Python SDK for bloXroute's Solana Trader API
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = bloXroute Labs
author_email = support@bloxroute.com
url = https://github.com/bloXroute-Labs/solana-trader-client-python
keywords = serum, solana, blockchain, trader, grpc, stream
classifiers = Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    aiohttp==3.9.5
    grpclib==0.4.7
    aiounittest==1.4.2
    base58==2.1.1
    solana==0.34.2
    solders==0.21.0
    bx-jsonrpc-py==0.2.0
    bxsolana-trader-proto==0.0.67
